# tg_hardcover_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN.md  README.md  api.py  bot.py  callbacks.py  config.py  db.py  dev.sh  docker-compose.yaml  i18n.py  middleware.py  pyproject.toml
.github/workflows/: lint.yml
handlers/: auth.py  import_csv.py  language.py  search.py  shelves.py
locales/: en.py  ru.py
