[project]
name = "handcover-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "aiosqlite==0.20.0",
    "httpx==0.27.2",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
